gccida/c0/loop_iv_class_dump
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iv_class_dump/src/loop.c:10871:1: error: use of undeclared identifier 'induction_1'
induction_1 *v; // [rsp+40h] [rbp-20h] 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iv_class_dump/src/loop.c:10871:14: error: use of undeclared identifier 'v'
induction_1 *v; // [rsp+40h] [rbp-20h] 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iv_class_dump/src/loop.c:10872:1: error: use of undeclared identifier 'induction_1'
induction_1 *va; // [rsp+40h] [rbp-20h] 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iv_class_dump/src/loop.c:10872:14: error: use of undeclared identifier 'va'
induction_1 *va; // [rsp+40h] [rbp-20h] 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iv_class_dump/src/loop.c:10903:1: error: use of undeclared identifier 'v'
v = bl_0->biv; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iv_class_dump/src/loop.c:10904:9: error: use of undeclared identifier 'v'
while ( v ) 
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iv_class_dump/src/loop.c:10906:46: error: use of undeclared identifier 'v'
fprintf( file, " Inc%d: insn %d, incr: ", i, v->insn->fld[0].rtuint); 
                                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iv_class_dump/src/loop.c:10907:25: error: use of undeclared identifier 'v'
print_simple_rtl( file, v->add_val); 
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iv_class_dump/src/loop.c:10909:1: error: use of undeclared identifier 'v'
v = v->next_iv; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iv_class_dump/src/loop.c:10909:5: error: use of undeclared identifier 'v'
v = v->next_iv; 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iv_class_dump/src/loop.c:10913:1: error: use of undeclared identifier 'va'
va = bl_0->giv; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iv_class_dump/src/loop.c:10914:9: error: use of undeclared identifier 'va'
while ( va ) 
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iv_class_dump/src/loop.c:10916:93: error: use of undeclared identifier 'va'
fprintf( file, " Giv%d: insn %d, benefit %d, ", ia, va->insn->fld[0].rtuint, ( unsigned int)va->benefit); 
                                                                                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iv_class_dump/src/loop.c:10916:53: error: use of undeclared identifier 'va'
fprintf( file, " Giv%d: insn %d, benefit %d, ", ia, va->insn->fld[0].rtuint, ( unsigned int)va->benefit); 
                                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iv_class_dump/src/loop.c:10917:6: error: use of undeclared identifier 'va'
if ( va->giv_type ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iv_class_dump/src/loop.c:10919:47: error: use of undeclared identifier 'va'
if ( rtx_class[( unsigned __int16)*( _DWORD *)va->insn] == 105 ) 
                                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iv_class_dump/src/loop.c:10921:40: error: use of undeclared identifier 'va'
if ( ( unsigned __int16)**( _DWORD **)&va->insn[2] == 47 ) 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iv_class_dump/src/loop.c:10922:12: error: use of undeclared identifier 'va'
v4 = ( rtx)va->insn[2]; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iv_class_dump/src/loop.c:10924:40: error: use of undeclared identifier 'va'
v4 = single_set_2( va->insn, *( rtx *)&va->insn[2]); 
                                       ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iv_class_dump/src/obj/loop.o] Error 1
